--- a/dlux/dashboards/network/connections/templates/connections/create.html
+++ b/dlux/dashboards/network/connections/templates/connections/create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}{% trans "Craete Connection" %}{% endblock %}
+{% block title %}{% trans "Create Connection" %}{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Create Connection") %}
