Initial UI work for OVSDB Integration

--- a/static/dashboard/less/dlux.less
+++ b/static/dashboard/less/dlux.less
@@ -1,5 +1,7 @@
 @import "../../bootstrap/less/bootstrap.less";
 //@import "../../bootstrap/less/datepicker.less";
+@import "../../bootstrap/less/navs.less";
+@import "../../bootstrap/less/accordion.less";
 
 /* new clearfix */
 .clearfix:after {
