Working "Hello World" Angular implementation

--- a/dlux/dashboards/network/connections/templates/connections/ovsdb.html
+++ b/dlux/dashboards/network/connections/templates/connections/ovsdb.html
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div class="row" ng-controller="ovsdbController">
+	<div class="row" ng-controller="OvsdbController">
 		<div class="span2">
 			<ul class="nav nav-pills nav-stacked">
 				<li class="active" id="open_vswitch"><a href="#">Open vSwitch</a></li>
@@ -15,11 +15,11 @@
 				<li><a href="#">SSL</a></li>
 				<li><a href="#">sFlow</a></li>
 				<li><a href="#">IPFIX</a></li>
-				<li><a href="#">Flow Sample Collector Set</li>
+				<li><a href="#">Flow Sample Collector Set</a></li>
 			</ul>
 		</div>
 		<div id="table" class="span10">
-			{{ greeting }}
+			<h1>{$ greeting $}</h1>
 		</div>
   </div>
 </div>
