--- a/dlux/dashboards/network/connections/templates/connections/detail.html
+++ b/dlux/dashboards/network/connections/templates/connections/detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'network/base.html' %}
 {% load i18n %}
 {% block title %}{% trans "Connection Details" %}{% endblock %}
 
