--- a/dlux/dashboards/network/templates/network/_scripts.html
+++ b/dlux/dashboards/network/templates/network/_scripts.html
@@ -1,5 +1,6 @@
 {% extends 'horizon/_scripts.html' %}
 
 {% block custom_js_files %}
-    <script src='{{ STATIC_URL }}dashboard/js/network/connections/ovsdbController.js' type='text/javascript' charset='utf-8'></script>
+    <script src='{{ STATIC_URL }}js/angular-ui-router.js' type='text/javascript' charset='utf-8'></script>
+    <script src='{{ STATIC_URL }}js/dlux-ovsdb.js' type='text/javascript' charset='utf-8'></script>
 {% endblock %}
