--- a/dlux/dashboards/network/connections/templates/connections/_scripts.html
+++ b/dlux/dashboards/network/connections/templates/connections/_scripts.html
@@ -2,5 +2,5 @@
 
 {% block custom_js_files %}
     <script src='{{ STATIC_URL }}js/angular-ui-router.js' type='text/javascript' charset='utf-8'></script>
-    <script src='{{ STATIC_URL }}js/dlux-ovsdb.js' type='text/javascript' charset='utf-8'></script>
+    <script src='{{ STATIC_URL }}js/connections.js' type='text/javascript' charset='utf-8'></script>
 {% endblock %}
