--- a/dlux/dashboards/network/connections/templates/connections/detail.html
+++ b/dlux/dashboards/network/connections/templates/connections/detail.html
@@ -1,10 +1,14 @@
-{% extends 'network/base.html' %}
+{% extends 'base.html' %}
 {% load i18n %}
 {% block title %}{% trans "Connection Details" %}{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Node Details") %}
 {% endblock page_header %}
+
+{% block js %}
+    {% include "network/connections/_scripts.html" %}
+{% endblock %}
 
 {% block main %}
 <div class="row-fluid">
