--- a/dlux/static/partials/ovsdb/table.html
+++ b/dlux/static/partials/ovsdb/table.html
@@ -1,6 +1,6 @@
 <h2>{$ table_defs[$stateParams.name].title $}</h2>
 
-<table class="table table-striped table-bordered" ng-style="{'max-width':'none'}">
+<table class="table table-striped table-bordered table-condensed" ng-style="{'max-width':'none'}">
 	<thead>
 		<tr>
 			<th ng-repeat="header in table_defs[$stateParams.name].headers" >{$ header $}</th>
