--- a/dlux/dashboards/network/neutron_networks/templates/neutron_networks/index.html
+++ b/dlux/dashboards/network/neutron_networks/templates/neutron_networks/index.html
@@ -3,7 +3,7 @@
 {% block title %}{% trans "Neutron Networks" %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Nodes") %}
+  {% include "horizon/common/_page_header.html" with title=_("OpenStack Networking") %}
 {% endblock page_header %}
 
 {% block main %}
