--- a/dlux/dashboards/network/neutron_ports/templates/neutron_ports/_detail_overview.html
+++ b/dlux/dashboards/network/neutron_ports/templates/neutron_ports/_detail_overview.html
@@ -14,7 +14,7 @@
     {% url 'horizon:network:neutron_networks:detail' port.network_id as network_url %}
     <dt>{% trans "Network ID" %}</dt>
     <dd><a href="{{ network_url }}">{{ port.network_id|default:_("None") }}</a></dd>
-    <dt>{% trans "Project ID" %}</dt>
+    <dt>{% trans "Tenant ID" %}</dt>
     <dd>{{ port.tenant_id|default:"-" }}</dd>
     <dt>{% trans "Fixed IP" %}</dt>
     <dd>
@@ -41,4 +41,18 @@
     <dd>No attached device</dd>
     {% endif %}
   </dl>
+  <h4>{% trans "Open vSwitch Information" %}</h4>
+  <hr class="header_rule">
+  <dl>
+    <dt>{% trans "Bridge ID" %}<dt>
+    <dd>{{ bridge_id|default:_("None") }}</dd>
+    <dt>{% trans "Port ID" %}<dt>
+    <dd>{{ port_id|default:_("None") }}</dd>
+    <dt>{% trans "Interface ID" %}<dt>
+    <dd>{{ interface_id|default:_("None") }}</dd>
+  </dl>
 </div>
+
+
+
+
