ODL Branding Take 1

--- a/static/bootstrap/less/variables.less
+++ b/static/bootstrap/less/variables.less
@@ -21,18 +21,18 @@
 @white:                 #fff;
 
 // Accent colors
-@blue:                  #049cdb;
+@blue:                  #53B3FF;
 @blueDark:              #0064cd;
 @green:                 #46a546;
 @red:                   #9d261d;
-@yellow:                #ffc40d;
-@orange:                #f89406;
+@yellow:                #ff8913;
+@orange:                #f7941e;
 @pink:                  #c3325f;
 @purple:                #7a43b6;
 
 // Typography
 @baseFontSize:          13px;
-@baseFontFamily:        "Helvetica Neue", Helvetica, Arial, sans-serif;
+@baseFontFamily:        "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @baseLineHeight:        18px;
 @textColor:             @grayDark;
 
@@ -105,3 +105,11 @@
 // Fluid grid
 @fluidGridColumnWidth:    6.382978723%;
 @fluidGridGutterWidth:    2.127659574%;
+
+// Tables
+// -------------------------
+@tableBackground:                   #ffffff; // overall background-color
+@tableBackgroundAccent:             #f7f7f7; // for striping
+@tableBackgroundHover:              #d7d7d7; // for hover
+@tableBorder:                       #d7d7d7; // table and cell border
+
