--- a/static/dashboard/less/dlux.less
+++ b/static/dashboard/less/dlux.less
@@ -15,13 +15,28 @@
 * html .clearfix             { zoom: 1; } /* IE6 */
 *:first-child+html .clearfix { zoom: 1; } /* IE7 */
 
+/* Daylight Colors */
+@yellow: #fdb813;
+@orange: #f7941e;
+@orange-dark: #f15922;
+@red: #de3322;
+@gray-dark: #333333;
+@white: #ffffff;
+
+/* Greys */
+@gray-light: #bfbfbf;
+@gray-lighter: #f7f7f7;
+@gray: #7f7f7f;
+@gray2: #404040;
+
+
 @font-face {
-  font-family: 'anivers';
-  src: url('/static/dashboard/fonts/Anivers_Regular-webfont.eot');
-  src: url('/static/dashboard/fonts/Anivers_Regular-webfont.eot?iefix') format('eot'),
-       url('/static/dashboard/fonts/Anivers_Regular-webfont.woff') format('woff'),
-       url('/static/dashboard/fonts/Anivers_Regular-webfont.ttf') format('truetype'),
-       url('/static/dashboard/fonts/Anivers_Regular-webfont.svg#webfont3JLVF59W') format('svg');
+  font-family: 'Roboto';
+  src: url('/static/dashboard/fonts/Roboto-Regular-webfont.eot');
+  src: url('/static/dashboard/fonts/Roboto-Regular-webfont.eot?iefix') format('eot'),
+       url('/static/dashboard/fonts/Roboto-Regular-webfont.woff') format('woff'),
+       url('/static/dashboard/fonts/Roboto-Regular-webfont.ttf') format('truetype'),
+       url('/static/dashboard/fonts/Roboto-Regular-webfont.svg#RobotoRegular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -45,8 +60,8 @@ dt {
 }
 
 .topbar {
-  background: #f2f2f2;
-  border-bottom: 1px solid #e5e5e5;
+  background: @gray-lighter;
+  border-bottom: 1px solid @gray-lighter;
   padding: 10px 25px;
   margin-top: 0;
   margin-left: -25px;
@@ -94,7 +109,7 @@ dt {
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: anivers;
+  font-family: Roboto;
 }
 
 h2 {
@@ -165,9 +180,9 @@ body {
 }
 
 .sidebar {
-    background: #edf9ff;
-    border-right: 5px solid #e5e5e5;
-    border-bottom: 5px solid #e5e5e5;
+    background: @gray-dark;
+    border-right: 5px solid @gray-lighter;
+    border-bottom: 5px solid @gray-lighter;
     float: left;
 }
 
@@ -181,13 +196,14 @@ body {
 }
 
 .sidebar .nav-tabs li.active a {
-    background-color: #edf9ff;
+    background-color: @gray-dark;
+    color: @white;
 }
 
 h1.brand {
     width: 100%;
     margin: 0;
-    background-color: #f5f5f5;
+    background-color: @white;
     padding-bottom: 40px;
 }
 
@@ -386,7 +402,7 @@ a.current_item:hover h3, a.current_item:hover h4 {
   border-bottom-right-radius: 4px;
 }
 .table_title h3, .table_header h3 {
-    font-family: anivers;
+    font-family: Roboto;
     font-weight: normal;
     font-size: 24px;
     margin-bottom: 5px;
@@ -457,9 +473,9 @@ small {
 
 .main_nav a.active {
   background: #fff;
-  border: 2px solid #d8d8d8;
+  border: 2px solid @gray-lighter;
   border-right: 0;
-  border-bottom-color: #ccc;
+  border-bottom-color: @gray-lighter;
 }
 
 table form {
@@ -877,7 +893,7 @@ div.table_cell_wrapper {
   margin: -18px 0 25px;
   padding: 10px;
   border: 1px solid #e1e1e1;
-  font-family: "anivers";
+  font-family: "Roboto";
 }
 
 #monitoring h3 {
@@ -1183,7 +1199,7 @@ td.actions_column .btn-action-required {
   background: none;
 }
 .dropdown-menu li.divider:hover {
-  background-color: #E5E5E5;
+  background-color: @gray-lighter;
 }
 
 td.actions_column .dropdown-menu a:hover,
@@ -1266,7 +1282,7 @@ tr.terminated {
 }
 
 #instance_tabs li a {
-  background: #f2f2f2;
+  background: @gray-light;
   display: block;
   font-size: 14px;
   float: left;
@@ -1970,7 +1986,7 @@ label.log-length {
 #selected_network {
   margin-bottom: 1.5em;
   counter-reset:v1 0;
-  background: #edf9ff;
+  background: @gray-dark;
   border:1px solid #c0d9e4;
   li {
     position: relative;
@@ -2240,7 +2256,7 @@ label.log-length {
 }
 
 .quota-heading {
-  font-family: anivers;
+  font-family: Roboto;
   font-weight: normal;
   font-size: 24px;
   margin-bottom: 10px;
@@ -2361,7 +2377,7 @@ label.log-length {
 #selected_rule {
   margin-bottom: 1.5em;
   counter-reset:v1 0;
-  background: #edf9ff;
+  background: @gray-dark;
   border:1px solid #c0d9e4;
   li {
     position: relative;
