--- a/dlux/dashboards/network/flavor_app/templates/flavor_app/classes/create.html
+++ b/dlux/dashboards/network/flavor_app/templates/flavor_app/classes/create.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}{% trans "Create Flavor" %}{% endblock %}
+{% block title %}{% trans "Create Class" %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Create Flavor") %}
+  {% include "horizon/common/_page_header.html" with title=_("Create Class") %}
 {% endblock page_header %}
 
 {% block main %}
