--- a/static/bootstrap/less/variables.less
+++ b/static/bootstrap/less/variables.less
@@ -32,7 +32,7 @@
 
 // Typography
 @baseFontSize:          13px;
-@baseFontFamily:        "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+@baseFontFamily:        "Helvetica Neue", Helvetica, Arial, sans-serif;
 @baseLineHeight:        18px;
 @textColor:             @grayDark;
 
